# PyTorch-Plugin-FL

./: CMakeLists.txt  README.md  README_zh.md  setup.py
.github/workflows/: ci.yml
cmake/: MetaxKernels.cmake
csrc/: CMakeLists.txt
csrc/aten/: common.cc  common.h  copy_ops.cc  copy_stub.h  dispatch_stub.h  register.cc  structured_ops.cc
csrc/aten/backends/maca/: add.cc  all.cc  le.cc  mul.cc
csrc/aten/backends/metax/: add.cu  add_kernel.cuh  all.cu  all_kernel.cuh  bmm_kernel.cuh  cat.cc  le.cu  le_kernel.cuh  mean_kernel.cuh  metax_elementwise.cuh  mm_kernel.cuh  mul.cu  mul_kernel.cuh  neg_kernel.cuh
csrc/aten/factory_ops/: copy_ops.cc
csrc/aten/functional_ops/: add_stub.cu  constant_pad_nd_stub.cc  embedding_dense_backward_stub.cc  log_softmax_stub.cc  log_softmax_stub.h  nll_loss_stub.cc  slice_backward_stub.cc
csrc/aten/native/ufunc/: add.h
csrc/runtime/: hooks.h
csrc/runtime/accelerator/: CMakeLists.txt
tests/integration/: test_ops.py
tests/integration/ops/: test_bitwise_and_dispatch.py  test_constant_pad_nd_dispatch.py  test_embedding_dense_backward_dispatch.py  test_log_softmax_dispatch.py  test_new_ones_dispatch.py  test_nll_loss_dispatch.py  test_scalar_tensor_dispatch.py  test_slice_backward_dispatch.py  test_where_dispatch.py
torch_fl/: __init__.py  backends.conf  backends_metax.conf
